syntax = "proto3";

package chat;
option java_package = "chat.proto";

service ChatService {
    rpc checkForMessages (CheckMessageRequest) returns (CheckMessageResponse) {}
    rpc postMessage (PostMessageRequest) returns (PostMessageResponse) {}
}

message ChatMessage {
    string id = 1;
    string user = 2;
    string message = 3;
    string timestamp = 4;
}

message CheckMessageRequest {

}

message CheckMessageResponse {
    repeated ChatMessage messages = 1;
}

message PostMessageRequest {
    string user = 1;
    string message = 2;
}

message PostMessageResponse {
    bool success = 1;
}
